--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   redux_persist_flutter: ^0.6.0-rc.1 
   redux_persist: ^0.7.0-rc.2
   dropdownfield: ^1.0.3
+  dio:
+  fluttertoast:
 
 dev_dependencies:
   flutter_test:
